HIVE-28059 : fixing PR comments; - improve tests;